<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.nm.teste_android.ui.form.FormActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_gross_amount_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/invested_amount_tile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/txtSizeHigh"
                android:id="@+id/et_invested_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/invested_amount_hint"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onInvestedAmountTextChanged(text)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_gross_amount_main" />

            <!-- -->

            <TextView
                android:id="@+id/tv_dt_venc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/dt_venc_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_invested_amount" />

            <com.nm.infrastructure.widget.DaTeEditText
                style="@style/txtSizeHigh"
                android:id="@+id/et_dt_venc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/dt_venc_hint"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onMaturityDateTextChanged(text)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dt_venc" />

            <!-- -->

            <TextView
                android:id="@+id/tv_cdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/cdi_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_dt_venc" />

            <EditText
                style="@style/txtSizeHigh"
                android:id="@+id/et_cdi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal|numberSigned"
                android:hint="@string/cdi_hint"
                android:onTextChanged="@{(text, start, before, count) -> viewModel.onRateTextChanged(text)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_cdi" />


            <!-- -->
            <Button
                android:id="@+id/btn_simulate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/btn_simulate_label"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/grayButton"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_cdi"
                app:rippleColor="@color/shamrockDark" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
